--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
       <div class="card" style="padding:18px">
         <div class="avatar-wrap">
-          <img class="avatar" src="photo_2025-10-23 01.49.22.jpeg" alt="Zhanél portrait" onerror="this.src='https://dummyimage.com/900x900/1c2233/b8c1d9.png&text=Your+Photo'">
+          <img class="avatar" src="img/profile.jpeg" alt="Zhanél portrait" onerror="this.src='https://dummyimage.com/900x900/1c2233/b8c1d9.png&text=Your+Photo'">
         </div>
       </div>
     </section>
@@ -224,8 +224,8 @@
           <h3>Certificate — STEP IT Academy</h3>
           <div class="carousel" id="certCarousel">
             <div class="slides">
-              <img src="photo_2025-10-23 01.58.07.jpeg" alt="Certificate 1" onerror="this.src='https://dummyimage.com/1200x700/171b27/9aa3b2.png&text=Your+Certificate'">
-              <img src="photo_2025-10-23 02.01.03.jpeg" alt="Certificate 2" onerror="this.src='https://dummyimage.com/1200x700/171b27/9aa3b2.png&text=Another+Certificate'">
+              <img src="img/1.jpeg" alt="Certificate 1" onerror="this.src='https://dummyimage.com/1200x700/171b27/9aa3b2.png&text=Your+Certificate'">
+              <img src="img/2.jpeg" alt="Certificate 2" onerror="this.src='https://dummyimage.com/1200x700/171b27/9aa3b2.png&text=Another+Certificate'">
             </div>
             <div class="car-ctr">
               <button class="car-btn" data-dir="-1">◀</button>
